export class cupomDesconto {
    id!: number;
    codigoCupom!: string;
    quantidadeDisponivel!: number;
    porcentagemDesconto!: number;
}