export class Fornecedor {
    id!: number;
    nome!: string;
    email!: string;
}
