export class Marca {
    id!: number;
    nome!: string;
    cnpj!: string;
}
