export class Pet {
    id!: number;
    nome!: string;
    especie!: string;
    raca!: string;
    idadeEmMeses!: number;
}
